# trading_system

./: .gitignore  Database.py  Dockerfile  Dockerfile.python  Execution_Engine.py  Flag_Pattern_Detect.py  Get_ob_Entry.py  Monotor_Pos.py  OKX_client.py  Order_Block.py  README.md  Strategy_Engine.py  SystemDesign.md  WebSocket_Candle.py  WebSocket_Real_time.py  authcreds.json  backtest_faster.py  benchmark.py  binance_client.py  bybit_client.py  change_leverage.py  chart_generator.py  check_open_positions.py  config.env  docker-compose.yml  dockerfile  exchange_info.csv  exchange_info.json  get_exchange_info.py  indicitor_Highs_Low.py  initial_data.py  main_bot.py  requirements.txt  symbols.py  telegram_bot.py  ticker_rules.py
.github/workflows/: Deploy.yml  data_feed.yml  execution.yml  indicator.yml  monitor.yml  run.yml  strategy.yml  telegram.yml
infra/: docker-compose.yml
services/data_feed/: Cargo.toml  Dockerfile
services/data_feed/src/: main.rs
services/execution_engine/: Dockerfile  Execution_Engine.py  bybit_client.py  exchange_info.json  get_exchange_info.py  requirements.txt
services/indicator_engine/: Dockerfile  indicitor_Highs_Low.py  requirements.txt
services/monitoring_engine/: Dockerfile  Position_Monitor.py  requirements.txt
services/strategy_engine/: Dockerfile  Flag_Pattern_Detect.py  Flag_Pattern_Strategy.py  Order_Block.py  Strategy_Engine.py  requirements.txt
services/telegram_engine/: Dockerfile  chart_generator.py  requirements.txt  telegram_bot.py
shared/: database.py  database.py.save  symbols.json  symbols_loader.py
shared/contracts/: __init__.py  channels.py  serializers.py  types.py
websocket_candle_rust/: Cargo.toml  Dockerfile.rust
websocket_candle_rust/src/: main.rs
