[package]
name = "websocket_candle_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
mongodb = { version = "2.7", features = ["tokio-runtime"] }
anyhow = "1.0"
futures-util = "0.3"
openssl = { version = "0.10", features = ["vendored"] }


