[package]
name = "websocket_candle_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tokio runtime (لا تغيير)
tokio = { version = "1.35", features = ["full"] }

# ----------------- التعديل هنا -----------------
# استبدلنا __rustls-tls بـ rustls-tls-webpki-roots
# هذا سيجعل البرنامج يحمل الشهادات بداخله ولا يعتمد على النظام
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"] }

# ----------------- التعديل هنا -----------------
# أضفنا default-features = false واستخدمنا rustls-tls-webpki-roots
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
# -----------------------------------------------

# Futures utilities (لا تغيير)
futures = "0.3.31"

# MongoDB Async (لا تغيير)
mongodb = { version = "2.6", features = ["tokio-runtime"] }

# Redis Async (لا تغيير)
redis = { version = "0.25.4", features = ["tokio-comp"] }

# Serde (لا تغيير)
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.123"

# Logging (لا تغيير)
log = "0.4.28"

# Stream utilities (لا تغيير)
tokio-stream = "0.1.14"

# ... مكتباتك السابقة ...

# مكتبات التسجيل (Logging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

